# tinyobjloader-c

./: .gitignore  Makefile  README.md  tinyobj_loader_c.h
.github/workflows/: codeql-buildscript.sh
doc/: index.html
doc/classes/C/: COMPATtinyobj_attrib_t-Summary.js  COMPATtinyobj_attrib_t-SummaryToolTips.js  COMPATtinyobj_attrib_t-ToolTips.js  COMPATtinyobj_attrib_t.html  Command-Summary.js  Command-SummaryToolTips.js  Command.html  CommandInformation-Summary.js  CommandInformation-SummaryToolTips.js  CommandInformation.html  hash_table_entry_t-Summary.js  hash_table_entry_t-SummaryToolTips.js  hash_table_entry_t.html  tinyobj_attrib_t-Summary.js  tinyobj_attrib_t-SummaryToolTips.js  tinyobj_attrib_t.html  tinyobj_coefficient_t-Summary.js  tinyobj_coefficient_t-SummaryToolTips.js  tinyobj_coefficient_t-ToolTips.js  tinyobj_coefficient_t.html  tinyobj_face_t-Summary.js  tinyobj_face_t-SummaryToolTips.js  tinyobj_face_t-ToolTips.js  tinyobj_face_t.html  tinyobj_line_t-Summary.js  tinyobj_line_t-SummaryToolTips.js  tinyobj_line_t.html  (+29 more)
doc/files/: tinyobj_loader_c-h-Summary.js  tinyobj_loader_c-h-SummaryToolTips.js  tinyobj_loader_c-h-ToolTips.js  tinyobj_loader_c-h.html
doc/menu/: classes.js  files.js  tabs.js
doc/other/: home.html
doc/search/: index.js
examples/viewer/: CMakeLists.txt  Makefile  glad.c  viewer.c
nd_config/: Comments.txt  Project.txt
test/: CMakeLists.txt  Makefile  README.md  tinyobj_api_tests.c  tinyobj_api_tests.h  tinyobj_internal_tests.c  tinyobj_internal_tests.h  tinyobj_regression_tests.c  tinyobj_regression_tests.h  tinyobj_tests.c
(+40 files in other folders)
